<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>kdtree_NN_search</name>
  <version>0.3.1</version>
  <description>A ROS2 package to perform nearest neighbor search using a k-d tree.
  </description>
  <maintainer email="thoropstrup@gmail.com">Thor Kamp Opstrup</maintainer>
  <license>Apache License 2.0</license>
  <author email="thoropstrup@gmail.com">Thor Kamp Opstrup</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_vitis</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vitis_common</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>acceleration_firmware_kv260</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
